# GeneralMisc

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tasks.py  up
heimdall/: .gitignore  docker-compose.yml
homeassistant/: changelog.md  docker-compose.yml
homeassistant/volumes/homeassistant/config/: configuration.yaml
homer/: docker-compose.yml
homer/volumes/assets/: config.yml
portainer/: docker-compose.yml
traefik/: docker-compose.yml  traefik.toml  traefik_dynamic.toml
ttrss/: README.md  docker-compose.yml
wallabag/: docker-compose.yml
